==> svijsv/GHMon/lib/uHAL/src/platform/AVR_XMEGA3/gpio.c <==
#include "gpio.h"
#include "system.h"
#include <avr/io.h>
#include <avr/power.h>
# define FLOAT_TOGGLES_OUTPUT 1
# define FLOAT_TOGGLES_OUTPUT 0
#define PINCTRL_RESET (PORT_ISC_INPUT_DISABLE_gc)
#define PINx_CTRL(_PORTx, _pinno) ((&(_PORTx)->PIN0CTRL)[_pinno])

void gpio_init(void) {
	uint8_t reg;

#if HAVE_GPIO_PORTA
	INIT_PORT(&PORTA);
#endif
#if HAVE_GPIO_PORTB
	INIT_PORT(&PORTB);
#endif
#if HAVE_GPIO_PORTC
	INIT_PORT(&PORTC);
#endif
#if HAVE_GPIO_PORTD
	INIT_PORT(&PORTD);
#endif
#if HAVE_GPIO_PORTE
	INIT_PORT(&PORTE);
#endif
#if HAVE_GPIO_PORTF
	INIT_PORT(&PORTF);
#endif

//
// Remap PORTMUX.CTRLB pins
	reg = 0;
#if GPIO_REMAP_I2C0 && defined(PORTMUX_TWI0_bm)
	DEBUG_CPP_MSG("Remapping I2C0")
	SET_BIT(reg, PORTMUX_TWI0_bm);
#endif
#if GPIO_REMAP_UART0 && defined(PORTMUX_USART0_bm)
	DEBUG_CPP_MSG("Remapping UART0")
	SET_BIT(reg, PORTMUX_USART0_bm);
#endif
#if GPIO_REMAP_SPI0 && defined(PORTMUX_SPI0_bm)
	DEBUG_CPP_MSG("Remapping SPI0")
	SET_BIT(reg, PORTMUX_SPI0_bm);
#endif
	PORTMUX.CTRLB = reg;

//
// Remap PORTMUX.CTRLC pins
	reg = 0;
#if GPIO_REMAP_TCA0W0 && defined(PORTMUX_TCA00_bm)
	DEBUG_CPP_MSG("Remapping TCA0W0")
	SET_BIT(reg, PORTMUX_TCA00_bm);
#endif
#if GPIO_REMAP_TCA0W1 && defined(PORTMUX_TCA01_bm)
	DEBUG_CPP_MSG("Remapping TCA0W1")
	SET_BIT(reg, PORTMUX_TCA01_bm);
#endif
#if GPIO_REMAP_TCA0W2 && defined(PORTMUX_TCA02_bm)
	DEBUG_CPP_MSG("Remapping TCA0W2")
	SET_BIT(reg, PORTMUX_TCA02_bm);
#endif
#if GPIO_REMAP_TCA0W3 && defined(PORTMUX_TCA03_bm)
	DEBUG_CPP_MSG("Remapping TCA0W3")
	SET_BIT(reg, PORTMUX_TCA03_bm);
#endif
	PORTMUX.CTRLC = reg;

//
// Remap PORTMUX.CTRLD pins
	reg = 0;
#if GPIO_REMAP_TCB0 && defined(PORTMUX_TCB0_bm)
	DEBUG_CPP_MSG("Remapping TCB0")
	SET_BIT(reg, PORTMUX_TCB0_bm);
#endif
	PORTMUX.CTRLD = reg;

	return;
}

err_t gpio_quickread_prepare(gpio_quick_t *qpin, gpio_pin_t pin) {
	PORT_t *PORTx;

	assert(qpin != NULL);
	assert(GPIO_PIN_IS_VALID(pin));
	if (!uHAL_SKIP_INVALID_ARG_CHECKS) {
		if ((!GPIO_PIN_IS_VALID(pin)) || (qpin == NULL)) {
			return ERR_BADARG;
		}
	}

	qpin->mask = GPIO_GET_PINMASK(pin);

	PORTx = gpio_get_port(pin);
	if (!uHAL_SKIP_INVALID_ARG_CHECKS) {
		if (PORTx == NULL) {
			return ERR_BADARG;
		}
	}
	qpin->port = &PORTx->IN;

	return ERR_OK;
}

err_t gpio_listen_init(gpio_listen_t *handle, const gpio_listen_cfg_t *conf) {
	PORT_t *portx;
	gpio_pin_t pin;

	assert(handle != NULL);
	assert(conf != NULL);
	assert(GPIO_PIN_IS_VALID(conf->pin));

	if (!uHAL_SKIP_INVALID_ARG_CHECKS) {
		if (handle == NULL || conf == NULL || !GPIO_PIN_IS_VALID(conf->pin)) {
			return ERR_BADARG;
		}
	}

	pin = conf->pin;
	portx = gpio_get_port(pin);
	if (!uHAL_SKIP_INVALID_ARG_CHECKS) {
		if (portx == NULL) {
			return ERR_BADARG;
		}
	}
	handle->pinctrl = &PINx_CTRL(portx, GPIO_GET_PINNO(pin));
	handle->old_trigger = SELECT_BITS(*handle->pinctrl, PORT_ISC_gm);

	switch (SELECT_BITS(conf->trigger, GPIO_TRIGGER_RISING|GPIO_TRIGGER_FALLING)) {
	case GPIO_TRIGGER_RISING|GPIO_TRIGGER_FALLING:
		handle->trigger = PORT_ISC_BOTHEDGES_gc;
		break;
	case GPIO_TRIGGER_RISING:
		handle->trigger = PORT_ISC_RISING_gc;
		break;
	case GPIO_TRIGGER_FALLING:
		handle->trigger = PORT_ISC_FALLING_gc;
		break;
#if ! uHAL_SKIP_INVALID_ARG_CHECKS
	default:
		return ERR_BADARG;
#endif
	}

	return ERR_OK;
}

err_t gpio_listen_off(gpio_listen_t *handle) {
	assert(handle != NULL);
	assert(handle->pinctrl != NULL);

	if (!uHAL_SKIP_INVALID_ARG_CHECKS) {
		if (handle == NULL) {
			return ERR_BADARG;
		}
		if (handle->pinctrl == NULL) {
			return ERR_INIT;
		}
	}

	MODIFY_BITS(*handle->pinctrl, PORT_ISC_gm, handle->old_trigger);
	return ERR_OK;
}

bool gpio_is_listening(gpio_pin_t pin) {
	PORT_t *portx;

	assert(GPIO_PIN_IS_VALID(pin));

	portx = gpio_get_port(pin);
	if (!uHAL_SKIP_INVALID_ARG_CHECKS) {
		if (portx == NULL) {
			return false;
		}
	}
	switch (SELECT_BITS(PINx_CTRL(portx, GPIO_GET_PINNO(pin)), PORT_ISC_gm)) {
	case PORT_ISC_BOTHEDGES_gc:
	case PORT_ISC_RISING_gc:
	case PORT_ISC_FALLING_gc:
		return true;
	}

	return false;
}
